# spark_az

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json
.claude/: README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  doc-sync.yml
docs/: ARCHITECTURE.md  CAPABILITIES.md  ROADMAP.md
docs/superpowers/plans/: 2026-05-21-pipeline-logger.md  README.md
docs/superpowers/specs/: 2026-05-21-pipeline-logger-design.md  2026-05-21-pipeline-starter-design.md  README.md
handoffs/: HANDOFF_TEMPLATE.md
notebooks/: lgr.ipynb  lgr.py  lgr_child.ipynb  lgr_child.py  pipeline_logger.ipynb  pipeline_logger.py  pipeline_logger_inline.ipynb  pipeline_logger_inline.py  pipeline_starter.ipynb  pipeline_starter.py
notebooks/_logging/: lgr.ipynb  lgr.py  lgr_inline.ipynb  lgr_inline.py  lgr_starter.ipynb  lgr_starter.py
scripts/: build.sh  build_notebooks.sh  db.py  db_search.ipynb  db_search.py  inline_lgr_child_notebook.py  inline_lgr_notebook.py  setup.sh  test.sh
src/spark_az/: __init__.py  child.py  lgr.py  pipeline_logger.py  session.py
synapse/: lgr_child_pipeline.json  lgr_pipeline.json  lgr_starter_pipeline.json  pipeline_template.json
tests/: conftest.py  test_child.py  test_child_delta.py  test_lgr.py  test_lgr_delta.py  test_pipeline_logger.py  test_pipeline_logger_delta.py  test_session.py
tools/: db.py  db_search.ipynb  db_search.py
