[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spark-az"
version = "0.1.0"
description = "Azure Synapse Spark notebook orchestration + Delta logging."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Artin" }]
dependencies = []

[project.optional-dependencies]
spark = ["pyspark", "delta-spark"]
test  = ["pyspark", "delta-spark", "pytest"]
dev   = ["jupytext"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["src"]
include = ["spark_az*"]

[tool.setuptools.package-data]
spark_az = ["py.typed"]

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src"]
reportMissingImports = "none"
